--- a/index.html
+++ b/index.html
@@ -17,7 +17,13 @@
 		</ul>
 	</nav>
 	<main>
-		<p>This is the main content of my website.</p>
+		<form method="post" action="/login">
+			<label for="username">Username:</label>
+			<input type="text" id="username" name="username" required>
+			<label for="password">Password:</label>
+			<input type="password" id="password" name="password" required>
+			<button type="submit">Login</button>
+		</form>
 	</main>
 	<footer>
 		<p>&copy; 2023 My Company</p>
