--- a/index.html
+++ b/index.html
@@ -1,29 +1,34 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>My Website</title>
+	<title>About Us</title>
 	<link rel="stylesheet" href="style.css">
-	<script src="script.js"></script>
 </head>
 <body>
 	<header>
-		<h1>Welcome to my website!</h1>
+		<h1>About Us</h1>
 	</header>
 	<nav>
 		<ul>
-			<li><a href="#">Home</a></li>
-			<li><a href="#">About</a></li>
-			<li><a href="#">Contact</a></li>
+			<li><a href="/">Home</a></li>
+			<li><a href="/about">About</a></li>
+			<li><a href="/contact">Contact</a></li>
 		</ul>
 	</nav>
 	<main>
-		<form method="post" action="/login">
-			<label for="username">Username:</label>
-			<input type="text" id="username" name="username" required>
-			<label for="password">Password:</label>
-			<input type="password" id="password" name="password" required>
-			<button type="submit">Login</button>
-		</form>
+		<h2>Our Story</h2>
+		<p>We are a small family-owned business that started in 2005. Our founder, John Smith, had a passion for creating unique and high-quality products that he couldn't find in stores. He started making these products in his garage and soon found that there was a demand for them.</p>
+		<p>Over the years, our business has grown and we now have a team of dedicated employees who share John's passion for quality and innovation. We are proud to offer a wide range of products that are designed and made in-house.</p>
+		<h2>Our Mission</h2>
+		<p>Our mission is to provide our customers with the highest quality products and the best possible service. We believe that every product we make should be both functional and beautiful, and we strive to create products that our customers will love and cherish for years to come.</p>
+		<h2>Our Team</h2>
+		<ul>
+			<li>John Smith - Founder and CEO</li>
+			<li>Jane Doe - Head of Design</li>
+			<li>Bob Johnson - Head of Production</li>
+			<li>Susan Lee - Sales Manager</li>
+			<li>Mike Wilson - Customer Service</li>
+		</ul>
 	</main>
 	<footer>
 		<p>&copy; 2023 My Company</p>
