--- a/about.html
+++ b/about.html
@@ -11,7 +11,7 @@
 	<nav>
 		<ul>
 			<li><a href="/">Home</a></li>
-			<li><a href="/about">About</a></li>
+			<li><a href="/https://github.com/lokeshpulusu/arms.github.io/blob/73e603687132acdfe60b769d74e24d3ad8f49628/about.html">About</a></li>
 			<li><a href="/contact">Contact</a></li>
 		</ul>
 	</nav>
